# ufps

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  mingw_toolchain.cmake  scene.yaml
.github/: pull_request_template.md
.github/actions/discord-notify/: action.yaml
.github/workflows/: ci.yaml  release.yaml  version-bump.yaml
assets/shaders/: average_luminance.comp  bloom_downsample.frag  bloom_mix.frag  bloom_upsample.frag  chromatic_aberration.frag  debug_light.frag  debug_light.vert  gbuffer.frag  gbuffer.vert  light_pass.frag  light_pass.vert  line.frag  line.vert  luminance_histogram.comp  simple.frag  simple.vert  ssao.frag  ssao_blur.frag  tone_map.frag  tone_map.vert
src/: CMakeLists.txt  config.h.in  main.cpp
src/concurrency/: CMakeLists.txt  awaitable_manager.h  concurrent_queue.h  cond_var.cpp  cond_var.h  lock.h  task.h  thread.h  thread_pool.cpp  thread_pool.h
src/core/: CMakeLists.txt  actor.h  camera.cpp  camera.h  contract_violation_handler.cpp  entity.cpp  entity.h  flycam_actor.cpp  flycam_actor.h  manifest_descriptions.h  player_actor.cpp  player_actor.h  render_entity.cpp  render_entity.h  scene.cpp  scene.h  service_locator.h  sparse_set.h  sub_mesh.cpp  sub_mesh.h  utils.h
src/events/: CMakeLists.txt  event.h  input_map.h  key.h  key_event.cpp  key_event.h  key_map.h  mouse_button_event.cpp  mouse_button_event.h  mouse_event.cpp  mouse_event.h  stop_event.h
src/graphics/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_writer.h  colour.h  command_buffer.cpp  command_buffer.h  dds.h  debug_renderer.cpp  debug_renderer.h  debug_ui.cpp  debug_ui.h  entity.h  frame_buffer.cpp  frame_buffer.h  line_data.h  material_manager.h  mesh_data.h  mesh_manager.cpp  mesh_manager.h  mesh_view.h  model_data.h  multi_buffer.h  object_data.h  opengl.h  persistent_buffer.cpp  persistent_buffer.h  point_light.h  program.cpp  program.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_data.h  (+7 more)
src/maths/: aabb.h  bounded_number.h  matrix3.h  matrix4.h  quaternion.h  ray.h  transform.h  utils.h  vector3.h  vector4.h
src/memory/: CMakeLists.txt  metrics.h  new.cpp
src/physics/: CMakeLists.txt  jolt.h  physics_debug_renderer.cpp  physics_debug_renderer.h  physics_layers.h  physics_system.cpp  physics_system.h  rigid_body.cpp  rigid_body.h  utils.h  virtual_character_controller.cpp  virtual_character_controller.h
src/resources/: CMakeLists.txt  embedded_resource_loader.cpp  embedded_resource_loader.h  file_resource_loader.cpp  file_resource_loader.h  resource_loader.h
src/serialisation/: CMakeLists.txt  yaml_serialiser.h
src/utils/: CMakeLists.txt  auto_release.h  com_release.h  compress.cpp  compress.h  data_buffer.h  decompress.cpp  decompress.h  error.h  exception.h  formatter.h  hello.cpp  hello.h  log.h  resolve_symbols.cpp  resolve_symbols.h  stack_trace_buffer.h  stack_trace_counter.h  string_map.h  system_info.cpp  system_info.h  text_utils.cpp  text_utils.h  wmi.cpp  wmi.h
tests/: CMakeLists.txt  auto_release_tests.cpp  awaitable_manager_tests.cpp  bounded_number_tests.cpp  concurrent_queue_tests.cpp  error_tests.cpp  formatter_tests.cpp  hello_tests.cpp  input_map_tests.cpp  matrix3_tests.cpp  matrix4_tests.cpp  multi_buffer_tests.cpp  new_tests.cpp  sparse_set_tests.cpp  task_tests.cpp  thread_pool_tests.cpp  thread_tests.cpp  vector3_tests.cpp  yaml_serialiser_tests.cpp
tools/: CMakeLists.txt  gen_embedded_resources.py  resource_packer.cpp
